# hummingbot

./: .gitignore  pyproject.toml  run_backpack_tests.sh  run_single_test.sh  setup_hummingbot_conda.sh
hummingbot/connector/derivative/backpack_perpetual/: backpack_perpetual_api_order_book_data_source.py  backpack_perpetual_auth.py  backpack_perpetual_constants.py  backpack_perpetual_derivative.py  backpack_perpetual_user_stream_data_source.py  backpack_perpetual_utils.py  backpack_perpetual_web_utils.py  dummy.pxd  dummy.pyx
hummingbot/connector/exchange/backpack/: backpack_api_order_book_data_source.py  backpack_api_user_stream_data_source.py  backpack_auth.py  backpack_constants.py  backpack_exchange.py  backpack_order_book.py  backpack_utils.py  backpack_web_utils.py  dummy.pxd  dummy.pyx
hummingbot/data_feed/candles_feed/: candles_factory.py
hummingbot/data_feed/candles_feed/backpack_perpetual_candles/: __init__.py  backpack_perpetual_candles.py  constants.py
hummingbot/data_feed/candles_feed/backpack_spot_candles/: __init__.py  backpack_spot_candles.py  constants.py
test/hummingbot/connector/derivative/backpack_perpetual/: test_backpack_perpetual_api_order_book_data_source.py  test_backpack_perpetual_auth.py  test_backpack_perpetual_derivative.py  test_backpack_perpetual_user_stream_data_source.py  test_backpack_perpetual_utils.py  test_backpack_perpetual_web_utils.py
test/hummingbot/connector/exchange/backpack/: __init__.py  test_backpack_auth.py  test_backpack_utils.py
test/hummingbot/data_feed/candles_feed/: test_backpack_perpetual_candles.py  test_backpack_spot_candles.py
